--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "jsonwebtoken": "^8.5.1",
   "mongoose": "^5.8.2",
   "typescript": "^3.4.5",
-  "request": "^2.88.2"
+  "request": "^2.88.2",
+  "ts-node": "^8.1.0"
  },
  "devDependencies": {
-  "nodemon": "^1.19.0",
-  "ts-node": "^8.1.0"
+  "nodemon": "^1.19.0"
  },
  "scripts": {
   "start": "ts-node basicInfoServer.ts",
