--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "@types/mongoose": "^5.5.34",
   "asoiaf-api": "^1.0.1",
   "body-parser": "^1.19.0",
+  "cors": "^2.8.5",
   "dotenv": "^8.2.0",
   "express": "^4.17.1",
+  "express-promise-router": "^3.0.3",
   "jsonwebtoken": "^8.5.1",
   "mongoose": "^5.8.2",
-  "typescript": "^3.4.5",
   "request": "^2.88.2",
-  "ts-node": "^8.1.0"
+  "ts-node": "^8.1.0",
+  "typescript": "^3.4.5"
  },
  "devDependencies": {
   "nodemon": "^1.19.0"
