--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "asoiaf-api": "^1.0.1",
   "body-parser": "^1.19.0",
   "cors": "^2.8.5",
+  "crypto-js": "^4.0.0",
   "dotenv": "^8.2.0",
   "express": "^4.17.1",
   "express-promise-router": "^3.0.3",
