--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
  "main": "basic-info-server.main.ts",
  "license": "MIT",
  "dependencies": {
+  "@types/debug": "^4.1.5",
   "@types/dotenv": "^8.2.0",
   "@types/express": "^4.17.6",
   "@types/mongoose": "^5.5.34",
+  "@types/node-cron": "^2.0.3",
   "asoiaf-api": "^1.0.1",
   "body-parser": "^1.19.0",
   "cors": "^2.8.5",
   "crypto-js": "^4.0.0",
+  "debug": "^4.1.1",
   "dotenv": "^8.2.0",
   "express": "^4.17.1",
   "express-promise-router": "^3.0.3",
   "jsonwebtoken": "^8.5.1",
   "mongoose": "^5.8.2",
+  "node-cron": "^2.0.3",
   "request": "^2.88.2",
   "ts-node": "^8.1.0",
   "typescript": "^3.4.5"
