--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
  "main": "basic-info-server.main.ts",
  "license": "MIT",
  "dependencies": {
+  "@types/cors": "^2.8.9",
+  "@types/crypto-js": "^4.0.1",
   "@types/debug": "^4.1.5",
   "@types/dotenv": "^8.2.0",
   "@types/express": "^4.17.6",
+  "@types/jsonwebtoken": "^8.5.0",
   "@types/mongoose": "^5.5.34",
   "@types/node-cron": "^2.0.3",
   "asoiaf-api": "^1.0.1",
@@ -20,7 +23,6 @@
   "express-promise-router": "^3.0.3",
   "jsonwebtoken": "^8.5.1",
   "mongoose": "^5.8.2",
-  "node-cron": "^2.0.3",
   "request": "^2.88.2",
   "ts-node": "^8.1.0",
   "typescript": "^3.4.5"
