--- a/.github/workflows/pr-open-workflows.yml
+++ b/.github/workflows/pr-open-workflows.yml
@@ -47,11 +47,7 @@ jobs:
       # Run postman command
       - run: npm install
       - run: npm run-script postman
-
-      # Upload the contents of Test Results directory to workspace
-      - name: Output the run Details
-        uses: actions/upload-artifact@v2
-        with:
-          name: RunReports
-          path: ./assets/test-results
-          token: ${{ secrets.MASTER_BRANCH_ACCESS_TOKEN }}
+      - run: |
+          git add .
+          git commit -m "Upgdate regression environment"
+          git push
