--- a/.github/workflows/pr-open-workflows.yml
+++ b/.github/workflows/pr-open-workflows.yml
@@ -55,5 +55,6 @@ jobs:
           git config --global user.name 'fatihturker'
           git config --global user.email 'fatihturker35@gmail.com'
           git remote set-url origin https://${{ secrets.MASTER_BRANCH_ACCESS_TOKEN }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git add .
           git commit -am "Automated report"
           git push origin develop
