Fix Commit Report Command

--- a/.github/workflows/pr-open-workflows.yml
+++ b/.github/workflows/pr-open-workflows.yml
@@ -56,5 +56,5 @@ jobs:
           git config --global user.email 'fatihturker35@gmail.com'
           git remote set-url origin https://${{ secrets.MASTER_BRANCH_ACCESS_TOKEN }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git add .
-          git commit -am "Automated report"
-          git push
+          git commit -m "Automated report"
+          git push -u remote develop
