--- a/.github/workflows/pr-open-workflows.yml
+++ b/.github/workflows/pr-open-workflows.yml
@@ -61,4 +61,5 @@ jobs:
         run: |
           git add .
           git commit -m "Automated report"
+          git pull
           git push --set-upstream origin develop
