--- a/.github/workflows/pr-open-workflows.yml
+++ b/.github/workflows/pr-open-workflows.yml
@@ -52,6 +52,8 @@ jobs:
 
       - name: Commit Report
         run: |
+          git config --global user.name 'fatihturker'
+          git config --global user.email 'fatihturker35@gmail.com'
           git add .
           git commit -m "Automated report"
           git push
