--- a/.github/workflows/pr-open-to-master-workflows.yml
+++ b/.github/workflows/pr-open-to-master-workflows.yml
@@ -44,4 +44,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with: 
           name: PostmanReports
-          path: assets/testResults
+          path: ./assets/test-results
