--- a/.github/workflows/pr-open-to-master-workflows.yml
+++ b/.github/workflows/pr-open-to-master-workflows.yml
@@ -35,7 +35,7 @@
         with:
           token: ${{ secrets.MASTER_BRANCH_ACCESS_TOKEN }}
 
-      # INstall Node on the runner
+      # Install Node on the runner
       - name: Install Node
         uses: actions/setup-node@v1
         with:
