--- a/.github/workflows/pr-open-to-master-workflows.yml
+++ b/.github/workflows/pr-open-to-master-workflows.yml
@@ -34,6 +34,7 @@
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.MASTER_BRANCH_ACCESS_TOKEN }}
+          ref: develop
 
       # Install Node on the runner
       - name: Install Node
@@ -57,7 +58,7 @@
           git config --global user.email 'fatihturker35@gmail.com'
           git add .
           git commit -m "Automated report"
-          git push origin HEAD:develop --force
+          git push
       - name: Output the Run Details
         uses: actions/upload-artifact@v2
         with: 
