--- a/.github/workflows/pr-open-to-master-workflows.yml
+++ b/.github/workflows/pr-open-to-master-workflows.yml
@@ -54,6 +54,7 @@
           npm run-script postman
       - name: Commit Report
         run: |
+          git pull
           git config --global user.name 'fatihturker'
           git config --global user.email 'fatihturker35@gmail.com'
           git add .
