--- a/app.json
+++ b/app.json
@@ -3,5 +3,12 @@
   "description": "Basic Info Server Template in NodeJS Express.js",
   "repository": "https://github.com/open-template-hub/basic-info-server-template",
   "logo": "https://avatars2.githubusercontent.com/u/65504426?s=200&v=4",
-  "keywords": ["server", "template", "nodejs", "typescript", "mongodb", "mongoose"]
+  "keywords": [
+    "server",
+    "template",
+    "nodejs",
+    "typescript",
+    "mongodb",
+    "mongoose"
+  ]
 }
