--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "basic-info-server",
+  "name": "basic-info-server-template",
+  "description": "Basic Info Server Template for generic usage in Node.js",
   "version": "2.0.25",
-  "description": "Template Basic Info Server",
-  "main": "basic-info-server.main.ts",
   "license": "MIT",
+  "main": "basic-info-server.main.ts",
+  "scripts": {
+    "start": "ts-node basic-info-server.main.ts",
+    "startLocal": "nodemon --exec DEBUG=* ts-node basic-info-server.main.ts",
+    "postmanDevelop": "newman run ./assets/tests/regression-tests/postman/basic-info-server-regression.postman_collection.json -e ./assets/tests/regression-tests/postman/basic-info-server-regression.postman_environment.json -r htmlextra --reporter-htmlextra-export ./assets/test-results/postman.html --reporter-htmlextra-darkTheme  > ./assets/test-results/postman-dark.html"
+  },
   "dependencies": {
     "@open-template-hub/common": "^1.0.28",
     "@types/cors": "^2.8.9",
@@ -22,13 +27,25 @@
   "devDependencies": {
     "nodemon": "^1.19.0"
   },
-  "scripts": {
-    "start": "ts-node basic-info-server.main.ts",
-    "devStart": "nodemon --exec DEBUG=* ts-node basic-info-server.main.ts",
-    "postman": "newman run ./assets/tests/regression-tests/postman/basic-info-server-regression.postman_collection.json -e ./assets/tests/regression-tests/postman/basic-info-server-regression.postman_environment.json -r htmlextra --reporter-htmlextra-export ./assets/test-results/postman.html --reporter-htmlextra-darkTheme  > ./assets/test-results/postman-dark.html"
+  "git repository": "https://github.com/open-template-hub/basic-info-server-template",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/open-template-hub/basic-info-server-template.git"
   },
-  "engines": {
-    "node": "12.13.1",
-    "npm": "6.12.1"
-  }
+  "keywords": [
+    "info",
+    "information",
+    "basic-info",
+    "mongo",
+    "mongodb",
+    "mongoose",
+    "backend",
+    "rest",
+    "node",
+    "nodejs",
+    "typescript",
+    "template",
+    "server template",
+    "open template hub"
+  ]
 }
