--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "Basic Info Server Template",
   "description": "Basic Info Server Template for generic usage in Node.js",
   "repository": "https://github.com/open-template-hub/basic-info-server-template",
-  "logo": "https://avatars2.githubusercontent.com/u/65504426?s=200&v=4",
+  "logo": "https://github.com/open-template-hub/open-template-hub.github.io/blob/master/assets/logo/brand-logo.png?raw=true",
   "keywords": [
     "info",
     "information",
