--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
   "scripts": {
     "start": "ts-node business-logic-server.main.ts",
     "startLocal": "nodemon --exec DEBUG=* ts-node business-logic-server.main.ts",
-    "postmanDevelop": "newman run ./assets/tests/regression-tests/postman/business-logic-server-regression.postman_collection.json -e ./assets/tests/regression-tests/postman/business-logic-server-regression.postman_environment.json -r htmlextra --reporter-htmlextra-export ./assets/test-results/postman.html --reporter-htmlextra-darkTheme  > ./assets/test-results/postman-dark.html",
+    "postmanDevelop": "mkdir -p -- ./assets/test-results && touch ./assets/test-results/postman-dark.html && touch ./assets/test-results/postman.html && newman run assets/tests/regression-tests/postman/business-logic-server-regression.postman_collection.json -e assets/tests/regression-tests/postman/business-logic-server-regression.postman_environment_develop.json -r htmlextra --reporter-htmlextra-export ./assets/test-results/postman.html --reporter-htmlextra-darkTheme  > ./assets/test-results/postman-dark.html --env-var $npm_config_adminAuthToken --env-var $npm_config_responseEncryptionSecret",
     "outdated": "node dependency-checker.ts > docs/OUTDATED.md"
   },
   "dependencies": {
-    "@open-template-hub/common": "^4.1.0",
-    "@types/cors": "^2.8.9",
-    "@types/express": "^4.17.6",
-    "@types/mongoose": "^5.5.34",
-    "body-parser": "^1.20.0",
+    "@open-template-hub/common": "^5.0.1",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "@types/mongoose": "^5.11.97",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "express-promise-router": "^4.1.1",
-    "mongoose": "^6.3.6",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
+    "mongoose": "^6.8.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.20"
   },
   "git repository": "https://github.com/open-template-hub/business-logic-server-template",
   "repository": {
