--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "outdated": "node dependency-checker.ts > docs/OUTDATED.md"
   },
   "dependencies": {
-    "@open-template-hub/common": "^5.0.10",
+    "@open-template-hub/common": "5.0.11",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/mongoose": "^5.11.97",
